Updated the Outbound framework with send email functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     ".env": "explorerExcludedFiles",
     ".vscode": "explorerExcludedFiles",
     "config.toml": "explorerExcludedFiles",
-    "contract": "explorerExcludedFiles"
+    "receive/.env": "explorerExcludedFiles"
   }
 }
